# CryptoTradeStream

./: README.md  docker-compose.yaml  main.py  pyproject.toml
dashboard/: app.py  cli_app.py  dashboard-dockerfile  kafka_utils.py
kafka/: create-topics.sh  docker-compose2.yaml  docker-compose3.yaml  docker-compose4.yaml
producer/: crypto_producer.py  crypto_producer2.py  producer-dockerfile  requirements.txt
spark_processor/: processor.py  requirements.txt  spark-processor-dockerfile  spark_processor.py
